# devops-agent

./: .gitignore  0.0.6  0.104.0  0.2.0  0.24.0  0.3.0  12.0  2.0.0  23.0.0  3.1.0  8.0.0  README.md  api_server.py  build_log_service.py  chat_agent.py  config.py  database_checkpointer.py  database_service.py  debug_test.py  design.md  env_example.txt  intent_classifier.py  knowledge_base.py  llm_service.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  setup.py  simple_test.py  start.bat  start.sh  test_agent.py  test_agent_memory.py  test_agent_simple.py  test_api.py  test_database.py  test_imports.py  test_multiturn.py  (+2 more)
README/: README.md  design.md  extend.md
devops_qa_agent/: __init__.py  main.py
devops_qa_agent/api/: server.py
devops_qa_agent/config/: __init__.py  settings.py
devops_qa_agent/knowledge/: __init__.py  base.py
devops_qa_agent/knowledge/data/: knowledge_base.json
devops_qa_agent/services/: build_log_service.py  chat_service.py  intent_service.py  llm_service.py
docs/: README.md
static/css/: style.css
static/js/: chat.js
templates/: chat.html
